--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,17 +25,24 @@
     background-image: linear-gradient(120deg, #274a9b 0%, #f68084 100%);
     border-radius: 20px;
 }
-.w-50{
-    width: 50%;
+.ancho{
     margin:0 auto;
+    width: 40%;
 }
 .navbar-dark {
     --bs-navbar-color: rgba(66, 65, 65, 0.865);
+}
+h1{
+    text-align: center;
 }
 
 h4{
     padding-top: 0.5rem;
     text-align: center;
+}
+
+p{
+    margin-bottom: 0;
 }
 .max-altura{
     height: 80vh;
@@ -58,67 +65,6 @@ h4{
     left:1rem; 
     position:fixed;
 }
-/****** ANIMACION FONDO BURBUJAS */
-.burbuja{
-    border-radius: 50%;
-    background-color: #fff;
-    opacity: .3;
-
-    position: absolute;
-    bottom: -150;
-
-    animation: burbujas 3s linear infinite;
-}
-.burbuja:nth-child(1){
-    width: 80px;
-    height: 80px;
-    left:5%;
-    animation-duration: 3s;
-    animation-delay: 3s;
-}
-.burbuja:nth-child(2){
-    width: 100px;
-    height: 100px;
-    left:35%;
-    animation-duration: 3s;
-    animation-delay: 5s;
-}
-.burbuja:nth-child(3){
-    width: 20px;
-    height: 20px;
-    left:15%;
-    animation-duration: 1.5s;
-    animation-delay: 7s;
-}
-.burbuja:nth-child(4){
-    width: 70px;
-    height: 70px;
-    left:65%;
-    animation-duration: 6s;
-    animation-delay: 2s;
-}
-.burbuja:nth-child(5){
-    width: 50px;
-    height: 50px;
-    left:90%;
-    animation-duration: 6s;
-    animation-delay: 3s;
-}
-.burbuja:nth-child(6){
-    width: 20px;
-    height: 20px;
-    left:50%;
-    animation-duration: 4s;
-    animation-delay: 5s;
-}
-.burbuja:nth-child(7){
-    width: 20px;
-    height: 20px;
-    left:50%;
-    animation-duration: 4s;
-    animation-delay: 3s;
-}
-
 
 /*****************  ANIMACION ********************************/
 .shadow-pop-tr {
